# WeFlow

./: .gitignore  PERFORMANCE_OPTIMIZATION_PLAN.md  REFACTORING_ROADMAP.md  RUST_INTEGRATION_GUIDE.md  RUST_SETUP.md  RUST_SUMMARY.md  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  enhancement.yml  feature.yml  question.yml
.github/workflows/: dev-daily-fixed.yml  preview-nightly-main.yml  release.yml
docs/: DAY_PARTITION_HTML_EXPORT.md
electron/: exportWorker.ts  main.ts  preload.ts  wcdbWorker.ts  wcdbWorkerScheduler.ts  wcdbWorkerTransport.ts
electron/constants/: imageDecrypt.ts
electron/ipc/: chatHandlers.ts  exportHandlers.ts
electron/services/: backupService.ts  bizService.ts  chatService.ts  config.ts  contactCacheService.ts  contactExportService.ts  exportChatLabWriter.ts  exportExcelWriter.ts  exportHtmlStyles.ts  exportHtmlWriter.ts  exportJsonWriter.ts  exportService.ts  exportServiceTypes.ts  exportServiceUtils.ts  exportSessionsWriter.ts  exportTxtWriter.ts  exportWeCloneWriter.ts  exportWriterContext.ts  groupAnalyticsService.ts  groupMyMessageCountCacheService.ts  groupSummaryRecordService.ts  httpService.ts  imageDecryptService.ts  imageDownloadService.ts  imagePreloadService.ts  insightService.ts  keyServiceLinux.ts  messageCacheService.ts  messagePushService.ts  nativeExport.ts  nativeExportHtml.ts  nativeImageDecrypt.ts  rustBridge.ts  sessionStatsCacheService.ts  videoService.ts  wcdbCore.ts  wcdbService.ts
electron/utils/: collectImageHardlinkMd5s.ts  debouncedFilePersist.ts  fileLogService.ts  perfLogger.ts  (+1 more)
rust/: .npmignore  Cargo.toml  FIXES.md  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  setup.sh
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/analytics/: insight.rs  mod.rs  stats.rs  yearly.rs
rust/src/crypto/: image.rs  key.rs  mod.rs
rust/src/db/: connection.rs  mod.rs  models.rs  queries.rs
rust/src/export/: csv.rs  excel.rs  html.rs  json.rs  mod.rs  txt.rs
rust/src/utils/: file.rs  mod.rs  path.rs  time.rs
scripts/: after-pack.cjs  analyze-perf-log.mjs
src/: App.scss  App.tsx
(+79 files in other folders)
