[package]
name = "weflow-core"
version = "4.3.0"
edition = "2021"
authors = ["WeFlow Team"]
description = "WeFlow core Rust library for high-performance operations"
license = "MIT"
repository = "https://github.com/hicccc77/WeFlow"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# NAPI-RS for Node.js binding
napi = { version = "2.16", default-features = false, features = ["napi9", "async"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Cryptography - 解密相关
aes = "0.8"
cipher = "0.4"
ctr = "0.9"
rsa = "0.9"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Compression - 压缩/解压
flate2 = "1.0"
zstd = "0.13"

# Serialization - 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - 数据库
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "uuid"] }

# Excel/CSV - 导出相关
csv = "1.3"
# calamine = "0.25"  # Excel reading (如果需要)

# HTTP Client - HTTP 服务
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }

# Image processing - 图片处理
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Video/Audio processing - 音视频处理
# ffmpeg-next = "7.0"  # 可选，如果需要 FFmpeg 绑定

# Utilities - 工具库
rayon = "1.10"          # 并行计算
thiserror = "2.0"       # 错误处理
anyhow = "1.0"          # 错误处理
chrono = "0.4"          # 时间处理
regex = "1.11"          # 正则表达式
walkdir = "2.5"         # 目录遍历
memmap2 = "0.9"         # 内存映射文件
crossbeam = "0.8"       # 并发原语
dashmap = "6.1"         # 并发哈希表
parking_lot = "0.12"    # 高性能锁
bytes = "1.9"           # 字节处理
tracing = "0.1"         # 日志/追踪
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # 日志订阅器

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "decrypt_benchmark"
harness = false
